[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/UIButton/UIButton.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/UIButtonLabel.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[node name="UIButton" type="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -56.0
margin_right = 32.0
margin_bottom = 56.0
rect_min_size = Vector2( 64, 112 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
rotation_speed = 175
label = "Pause"

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 32, 72 )

[node name="IconAnimationTween" type="Tween" parent="."]

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -77.0
rect_min_size = Vector2( 64, 32 )
custom_fonts/font = ExtResource( 2 )
text = "Pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_UIButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_UIButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_UIButton_pressed"]
